--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,134 @@ html {
     background-color: rgb(241, 241, 241);
 }
 
+/*-==================-*/
+
+header {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    z-index: 999;
+}
+
+.menu {
+    width: 100%;
+    height: 60px;
+    position: relative;
+}
+
+.menu-pc {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.menu-pc li {
+    list-style-type: none;
+    display: inline-block;
+}
+
+.menu-pc a {
+    margin: 10px 15px;
+    padding: 10px 15px;
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.4s;
+}
+
+.menu-pc a:hover {
+    color: #919191;
+}
+
+.menu-logo h1 {
+    font-size: 20px;
+    color: white;
+    padding: 20px;
+    cursor: context-menu;
+}
+
+.menu-btn-a {
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.4s;
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.menu-btn-a:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+/*
+.menu-btn-b {
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.4s;
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.menu-btn-b:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+*/
+.menu-mobile {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    text-align: center;
+    margin: auto;
+    background-color: #ededed;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    display: none;
+    transition: 0.4s;
+}
+
+.menu-mobile li {
+    margin: 15px;
+    list-style-type: none;
+}
+
+.menu-mobile a{
+    font-size: 15px;
+    color: black;
+    padding: 5px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    transition: 0.4s;
+}
+
+.menu-mobile a:hover {
+    color: white;
+    background-color: #06254e;
+}
+
+@media screen and (max-width: 500px){
+    .menu-pc {
+        display: none;
+    }
+    .menu-btn-a {
+        display: block;
+    }
+    .open {
+        display: block;
+    }
+}
+
+/*-==================-*/
+
 .banner {
     width: 100%;
     height: 600px;
@@ -29,9 +157,35 @@ html {
     position: relative;
 }
 
+.banner-menor {
+    width: 70%;
+    height: 600px;
+    margin: auto;
+    position: relative;
+}
+
+@media screen and (max-width: 1080px) {
+    .banner-menor {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .banner-menor {
+        width: 100%;
+    }
+}
+
 .box-banner {
     width: 50%;
     height: 600px;
+}
+
+@media screen and (max-width: 630px) {
+    .box-banner {
+        width: 100%;
+        height: 380px;
+    }
 }
 
 .box-banner h1 {
@@ -43,6 +197,12 @@ html {
     cursor: context-menu;
 }
 
+@media screen and (max-width: 630px) {
+    .box-banner h1 {
+        padding-top: 130px;
+    }
+}
+
 .box-banner p {
     font-size: 15px;
     font-weight: 500;
@@ -52,12 +212,18 @@ html {
     cursor: context-menu;
 }
 
+@media screen and (max-width: 630px) {
+    .box-banner p {
+        padding-right: 100px;
+    }
+}
+
 .btn-jogar {
     padding-top: 30px;
     padding-left: 100px;
 }
 
-.btn-jogar a {
+.btn-jogar_a {
     padding: 10px 15px;
     color: white;
     font-size: 15px;
@@ -70,8 +236,25 @@ html {
     position: relative;
 }
 
-.btn-jogar a:hover {
+.btn-jogar_a:hover {
     background-color: #0e5f96;
+}
+
+.btn-jogar_b {
+    padding: 10px 20px;
+    color: #3d3d3d;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 5px;
+    border: 2px solid #ffffff33;
+    position: relative;
+}
+
+.btn-jogar_b:hover {
+    background-color: #d1d1d1;
 }
 
 /*-==================-*/
@@ -80,19 +263,28 @@ html {
     position: absolute;
     bottom: 150px;
     right: 150px;
-    animation: flutuando 3s infinite alternate-reverse;
+}
+
+@media screen and (max-width: 850px) {
+    .dsn {
+        right: 50px;
+    }
 }
 
 .dsn img {
     width: 250px;
 }
 
-@keyframes flutuando {
-    0% {
-        transform: translateY(-10px);
+@media screen and (max-width: 630px) {
+    .dsn {
+        position: initial;
+        text-align: center;
+        margin: auto;
     }
-    100% {
-        transform: translateY(5px);
+    .dsn img {
+        width: 200px;
+        text-align: center;
+        margin: auto;
     }
 }
 
@@ -116,4 +308,25 @@ html {
 
 .redes img {
     width: 25px;
+}
+
+/*==================*/
+
+#btnTop{
+    background-color: #0e5f96;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    padding: 10px;
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    display: flex;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+#btnTop:hover {
+    background-color: #375072;
 }
